Chapter11/web-server-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server-a
  labels:
    app: web-server
    env: A
spec:
  containers:
  - name: webserver
    image: nginx:1.19.6-alpine
