Chapter11/front-end-service-secured.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # uncomment the line below to create a Load Balanced service
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
  loadBalancerSourceRanges:
  - <your public IP address>
